src/main/resources/cloudformation/platform-cluster.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: "AWS CloudFormation template for the CrateKube bootstrap POC"
Parameters:
  Keyname:
    Description: "Name of an existing EC2 KeyPair to enable SSH access to the instances"
    Type: "String"
    MinLength: "1"
    MaxLength: "64"
    AllowedPattern: "[-_ a-zA-Z0-9]*"
    ConstraintDescription: "can contain only alphanumeric characters, spaces, dashes and underscores"
Mappings:
  RegionMap:
    af-south-1:
      HVM64: ami-04402e3da3a7a5357
    eu-north-1:
      HVM64: ami-00ace2399b9d2b103
    ap-south-1:
      HVM64: ami-0d0e74761b4cc8a53
    eu-west-3:
      HVM64: ami-02840369a939ae502
    eu-west-2:
      HVM64: ami-066f0ae194916c572
    eu-south-1:
      HVM64: ami-0150ade5ec13519e2
    eu-west-1:
      HVM64: ami-09266271a2521d06f
    ap-northeast-2:
      HVM64: ami-062022418ff822030
    me-south-1:
      HVM64: ami-01c838c68451ec0dc
    ap-northeast-1:
      HVM64: ami-032b1a02e6610214e
    sa-east-1:
      HVM64: ami-0cbe40dd412e5ef32
    ca-central-1:
      HVM64: ami-05e77f4fec44e91f3
    ap-east-1:
      HVM64: ami-067e77c5d74f989a7
    ap-southeast-1:
      HVM64: ami-0fa00d20cc2fa3c81
    ap-southeast-2:
      HVM64: ami-064db566f79006111
    eu-central-1:
      HVM64: ami-0e9347664c1c5ed65
    us-east-1:
      HVM64: ami-09edd32d9b0990d49
    us-east-2:
      HVM64: ami-008c5ba1857e0fdec
    us-west-1:
      HVM64: ami-02649d71054b25d22
    us-west-2:
      HVM64: ami-023578bcb54b36edf
Resources:
  VPC:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock: "10.0.0.0/16"
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: "default"
  Subnet:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId: !Ref VPC
      CidrBlock: "10.0.1.0/24"
      MapPublicIpOnLaunch: true
  InternetGateway:
    Type: "AWS::EC2::InternetGateway"
  IGAttachment:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway
  RouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref VPC
  Route:
    Type: "AWS::EC2::Route"
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
  SubnetRtAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref RouteTable
      SubnetId: !Ref Subnet
  SshSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      VpcId: !Ref VPC
      GroupDescription: 'security group for ssh access'
      SecurityGroupEgress:
        FromPort: 0
        ToPort: 0
        IpProtocol: -1
        CidrIp: "0.0.0.0/0"
      SecurityGroupIngress:
      - FromPort: 22
        ToPort: 22
        IpProtocol: "tcp"
        CidrIp: "0.0.0.0/0"
      - FromPort: 10250
        ToPort: 10250
        IpProtocol: "tcp"
        CidrIp: "0.0.0.0/0"
      - FromPort: 2379
        ToPort: 2379
        IpProtocol: "tcp"
        CidrIp: "0.0.0.0/0"
      - FromPort: 6443
        ToPort: 6443
        IpProtocol: "tcp"
        CidrIp: "0.0.0.0/0"
  MasterInstance:
    Type: "AWS::EC2::Instance"
    Metadata:
      AWS::CloudFormation::Init:
        config:
          services:
            sysvinit:
              docker:
                enabled: "true"
                ensureRunning: "true"
    Properties:
      ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", HVM64]
      InstanceType: "t2.large"
      SubnetId: !Ref Subnet
      SecurityGroupIds: [!Ref SshSecurityGroup]
      KeyName: !Ref Keyname
      UserData:
        "Fn::Base64":
          !Sub |
          #!/bin/bash -xe
          yum install -y aws-cfn-bootstrap
          /opt/aws/bin/cfn-init --stack ${AWS::StackName} --resource MasterInstance --region ${AWS::Region}
          /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource MasterInstance --region ${AWS::Region}
    CreationPolicy:
      ResourceSignal:
        Timeout: PT4M
  WorkerInstance:
    Type: "AWS::EC2::Instance"
    Metadata:
      AWS::CloudFormation::Init:
        config:
          services:
            sysvinit:
              docker:
                enabled: "true"
                ensureRunning: "true"
    Properties:
      ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", HVM64]
      InstanceType: "t2.large"
      SubnetId: !Ref Subnet
      SecurityGroupIds: [!Ref SshSecurityGroup]
      KeyName: !Ref Keyname
      UserData:
        "Fn::Base64":
          !Sub |
          #!/bin/bash -xe
          yum install -y aws-cfn-bootstrap
          /opt/aws/bin/cfn-init --stack ${AWS::StackName} --resource WorkerInstance --region ${AWS::Region}
          /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource WorkerInstance --region ${AWS::Region}
    CreationPolicy:
      ResourceSignal:
        Timeout: PT4M
Outputs:
  MasterNodeDNS:
    Description: "master node host dns"
    Value: !GetAtt MasterInstance.PublicDnsName
  WorkerNodeDNS:
    Description: "worker node host dns"
    Value: !GetAtt WorkerInstance.PublicDnsName
